add mobile list screen ( UI only )

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MobilePhone</string>
+
+    <string name="content_description">contentDescription</string>
+
+    <string name="price">Price: $%.2f</string>
+    <string name="rating">Rating: %.1f</string>
+
 </resources>
