--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="error_message_no_mobile_favorite">No Mobile Favorite</string>
     <string name="loading">Loading</string>
     <string name="try_again">try again</string>
+    <string name="error_message_can_not_delete_favorite">Can\'t delete favorite!!!</string>
 
 </resources>
